--- a/part0/src/syllabus.html
+++ b/part0/src/syllabus.html
@@ -382,7 +382,7 @@ $(document).ready(function () {
 
 <div id="printing-date" class="section level2">
 <h2>Printing date</h2>
-<p>This syllabus was created on 2019-06-04 and last updated on 2019-06-04.</p>
+<p>This syllabus was created on 2019-06-04 and last updated on 2019-06-05.</p>
 </div>
 <div id="course-information" class="section level2">
 <h2>Course information</h2>
@@ -684,8 +684,8 @@ under 60, F</p>
 <div id="learning-objectives" class="section level3">
 <h3>Learning objectives</h3>
 <ol style="list-style-type: decimal">
-<li><p>To distinguish different types of quantitative non-experimental approaches</p></li>
-<li><p>To discuss strengths and weaknesses of qualitative research</p></li>
+<li><p>To read text data from a variety of different formats.</p></li>
+<li><p>To compute simple descriptive statistics for continuous variables.</p></li>
 </ol>
 </div>
 <div id="required-reading" class="section level3">
