--- a/part0/src/syllabus.html
+++ b/part0/src/syllabus.html
@@ -382,12 +382,12 @@ $(document).ready(function () {
 
 <div id="printing-date" class="section level2">
 <h2>Printing date</h2>
-<p>This syllabus was created on 2019-06-04 and last updated on 2019-06-05.</p>
+<p>This syllabus was created on 2019-06-04 and last updated on 2019-06-10.</p>
 </div>
 <div id="course-information" class="section level2">
 <h2>Course information</h2>
 <!-- regular html comment -->
-<p>This is an on-line class taught, starting on Tuesday, June 04, 2019 and ending on Friday, September 20, 2019.</p>
+<p>This is an on-line class taught during the eight week summer session. The course starts on Tuesday, June 04, 2019 and ends on Friday, July 26, 2019. Please refer to the <a href="https://www.umkc.edu/registrar/acal.asp">UMKC academic calendar</a> dates for further information.</p>
 <div id="your-instructor" class="section level3">
 <h3>Your instructor</h3>
 <p>Your instructor is Steve Simon in the Department of Biomedical and Health Informatics. My phone number is 816-235-6617 and my email is <a href="mailto:simons@umkc.edu" class="email">simons@umkc.edu</a>. My office is M5-117, located on the fifth floor of the School of Medicine building in the suite of offices for Biomedical and Health Informatics.</p>
@@ -722,8 +722,17 @@ under 60, F</p>
 <div id="assignment" class="section level3">
 <h3>Assignment</h3>
 <ol style="list-style-type: decimal">
-<li>See the discussion questions. Also, you should be working on your literature review. It is due on Friday, March 8 at midnight.</li>
+<li>Find an example of a SAS code on the web that includes a documentation header. Any code is fine, except code produced by SAS Institute itself. This could be a complete SAS program, a program fragment, or a macro. Look at the comment section at the very top of the program–anything preceding the first line of SAS code. Summarize the key elements that are included in these comments. Is there anything missing from the documentation that you would have liked to see? Include the link to the original web page where you found the SAS code.</li>
 </ol>
+<p>If you are having trouble finding SAS code on the web, here are a few resources.</p>
+<ul>
+<li><a href="https://github.com/friendly/SAS-macros" class="uri">https://github.com/friendly/SAS-macros</a></li>
+<li><a href="https://github.com/HHS-AHRQ/MEPS" class="uri">https://github.com/HHS-AHRQ/MEPS</a></li>
+<li><a href="https://github.com/jlroo/SAS-Programming" class="uri">https://github.com/jlroo/SAS-Programming</a></li>
+<li><a href="https://newonlinecourses.science.psu.edu/stat480/node/9/" class="uri">https://newonlinecourses.science.psu.edu/stat480/node/9/</a></li>
+<li><a href="http://psych.colorado.edu/~carey/Courses/PSYC7291/ExampleCode.htm" class="uri">http://psych.colorado.edu/~carey/Courses/PSYC7291/ExampleCode.htm</a></li>
+<li><a href="https://www.cdc.gov/nccdphp/dnpao/growthcharts/resources/sas.htm" class="uri">https://www.cdc.gov/nccdphp/dnpao/growthcharts/resources/sas.htm</a></li>
+</ul>
 </div>
 <div id="discussion-questions" class="section level3">
 <h3>Discussion questions</h3>
