Re-organized module1

--- a/basics_syllabus/results/syllabus.html
+++ b/basics_syllabus/results/syllabus.html
@@ -373,8 +373,10 @@ summary {
 <div id="course-information" class="section level3">
 <h3>Course information</h3>
 <!-- regular html comment -->
-<p>This is an on-line class taught during the eight week summer session. The course starts on Monday, June 08, 2020 and ends on Friday, July 31, 2020. Please refer to the <a href="https://www.umkc.edu/registrar/acal.asp">UMKC academic calendar</a> dates for further information.</p>
-<p>Note: Many thanks go to Dr. Mary Gerkovich, who provided an excellent structure and format to this class that I will be following closely.</p>
+<ul>
+<li><p>This is an on-line class taught during the eight week summer session. The course starts on Monday, June 08, 2020 and ends on Friday, July 31, 2020. Please refer to the <a href="https://www.umkc.edu/registrar/acal.asp">UMKC academic calendar</a> dates for further information.</p></li>
+<li><p>Note: Many thanks go to Dr. Mary Gerkovich, who provided an excellent structure and format to this class that I will be following closely.</p></li>
+</ul>
 </div>
 <div id="course-instructor" class="section level3">
 <h3>Course Instructor</h3>
@@ -419,17 +421,6 @@ summary {
 <p>Material posted on Canvas course site will support all course activities.</p>
 <p>Course Description: Course provides a working familiarity with SAS. Students are not expected to have advanced programming or statistical analysis skills, other than the ability to create and modify text files. Basic methods for data import, data management, simple graphics, and basic statistical analysis are introduced. This class will not cover advanced statistical methods, but will provide the student with a firm foundation to address these areas in advanced statistics classes or in the student’s research efforts, including thesis/dissertation research. A basic understanding of statistical terminology and a working familiarity with computer-based data files (e.g., Excel) is necessary.</p>
 </div>
-</div>
-<div id="course-information-1" class="section level3">
-<h3>Course information</h3>
-<p>In order for you to be successful in your graduate education, your research projects, and your future career, you need to learn to use statistical software like SAS. This class will introduce you to fundamental skills that are crtical in any SAS program and allow you to learn more advanced programming skills and data analyses on your own.</p>
-<div class="notes">
-<p>This course trains the student on how to run a basic SAS program. It covers input of various file formats, documentation of the data, data manipulation, basic descriptive statistics, and simple graphs.</p>
-</div>
-</div>
-<div id="course-evaluation" class="section level3">
-<h3>Course Evaluation</h3>
-<p>Completion of the confidential course evaluation at the end of the semester is available for the course and strongly encouraged. You will receive information about completing the evaluation from the Department office towards the end of the semester.</p>
 </div>
 <div id="required-and-recommended-materials" class="section level3">
 <h3>Required and recommended materials</h3>
@@ -481,6 +472,13 @@ summary {
 <div id="schedule" class="section level3">
 <h3>Schedule</h3>
 <p>Each module should take roughly one week. If a particular topic is causing the class as a whole some difficulty, you may get some extra time for a particular module.</p>
+</div>
+<div id="learning-objectives" class="section level3">
+<h3>Learning objectives</h3>
+<ol style="list-style-type: decimal">
+<li><p>To read text data from a variety of different formats.</p></li>
+<li><p>To compute simple descriptive statistics for continuous variables.</p></li>
+</ol>
 <ul>
 <li><p>Module 0, Getting started. A general introduction to SAS and information on how to run SAS on your computer.</p></li>
 <li><p>Module 1, Reading data from a variety of text formats. Variable labels. Missing value codes. Means, standard deviations, and percentiles. Histograms and scatterplots. Functional transformations. Program documentation.</p></li>
