Resized images in module1

--- a/basics_syllabus/results/syllabus.html
+++ b/basics_syllabus/results/syllabus.html
@@ -473,11 +473,39 @@ summary {
 <h3>Schedule</h3>
 <p>Each module should take roughly one week. If a particular topic is causing the class as a whole some difficulty, you may get some extra time for a particular module.</p>
 </div>
+<div id="module1---introduction" class="section level3">
+<h3>Module1 - Introduction</h3>
+<ol style="list-style-type: decimal">
+<li><p>To udnerstand the historical roots of the SAS program.</p></li>
+<li><p>To identify an access method for SAS that works for you.</p></li>
+</ol>
+</div>
 <div id="learning-objectives" class="section level3">
 <h3>Learning objectives</h3>
 <ol style="list-style-type: decimal">
-<li><p>To read text data from a variety of different formats.</p></li>
-<li><p>To compute simple descriptive statistics for continuous variables.</p></li>
+<li><p>To describe different approaches to probability sampling</p></li>
+<li><p>To discuss advantages and disadvantages of non-probability samples</p></li>
+</ol>
+</div>
+<div id="learning-objectives-1" class="section level3">
+<h3>Learning objectives</h3>
+<ol style="list-style-type: decimal">
+<li><p>To define what a literature review is and to contrast it with an annotated bibliography and a systematic overview.</p></li>
+<li><p>To recognize the different approaches to organizing a literature review.</p></li>
+</ol>
+</div>
+<div id="learning-objectives-2" class="section level3">
+<h3>Learning objectives</h3>
+<ol style="list-style-type: decimal">
+<li><p>To define what a randomized study is and explain its advantages and disadvantages.</p></li>
+<li><p>To describe how blinding, concealed allocation, and intention to treat analysis can improve the persuasiveness of a randomized trial.</p></li>
+</ol>
+</div>
+<div id="learning-objectives-3" class="section level3">
+<h3>Learning objectives</h3>
+<ol style="list-style-type: decimal">
+<li><p>To contrast the features of a quality improvement study with a research study</p></li>
+<li><p>To describe the various quasi-experimental approaches</p></li>
 </ol>
 <ul>
 <li><p>Module 0, Getting started. A general introduction to SAS and information on how to run SAS on your computer.</p></li>
