More work on overview1

--- a/basics1/results/overview1.html
+++ b/basics1/results/overview1.html
@@ -9,7 +9,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Steve Simon" />
 
 
 <title>Overview for Module1</title>
@@ -363,18 +362,18 @@ summary {
 
 
 <h1 class="title toc-ignore">Overview for Module1</h1>
-<h4 class="author">Steve Simon</h4>
 
 </div>
 
 
-<p>This list of readings was created by Steve Simon using bibtex and R Markdown on 2019-06-10 and last updated on 2020-06-27.</p>
+<p>This file was created by Steve Simon using R Markdown on 2020-06-27 and last updated on 2020-06-27. You can find the source code on <a href="https://github.com/pmean/introduction-to-SAS/tree/master/basics1/src">his github repository</a>.</p>
 <div id="module1---introduction" class="section level3">
 <h3>Module1 - Introduction</h3>
 <ol style="list-style-type: decimal">
 <li><p>To understand the historical roots of the SAS program.</p></li>
 <li><p>To identify an access method for SAS that works for you.</p></li>
 </ol>
+<p>V01-01. Getting started. Available in <a href="https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=3c8860e3-ec58-4873-ba83-aa68012a84c2">video format</a>.</p>
 </div>
 
 
