--- a/basics1/results/overview1.html
+++ b/basics1/results/overview1.html
@@ -366,14 +366,19 @@ summary {
 </div>
 
 
-<p>This file was created by Steve Simon using R Markdown on 2020-06-27 and last updated on 2020-06-27. You can find the source code on <a href="https://github.com/pmean/introduction-to-SAS/tree/master/basics1/src">his github repository</a>.</p>
+<p>This file was created by Steve Simon using R Markdown on 2020-06-27 and last updated on 2020-06-27. You can find the source code on <a href="https://github.com/pmean/introduction-to-SAS/tree/master/basics1/src">my github repository</a>.</p>
 <div id="module1---introduction" class="section level3">
 <h3>Module1 - Introduction</h3>
 <ol style="list-style-type: decimal">
 <li><p>To understand the historical roots of the SAS program.</p></li>
 <li><p>To identify an access method for SAS that works for you.</p></li>
 </ol>
-<p>V01-01. Getting started. Available in <a href="https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=3c8860e3-ec58-4873-ba83-aa68012a84c2">video format</a>.</p>
+</div>
+<div id="videos" class="section level3">
+<h3>Videos</h3>
+<p>V01-01. Getting started (16 minutes). Available in <a href="https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=3c8860e3-ec58-4873-ba83-aa68012a84c2">Panopto format</a>. Slides with speaker notes available in <a href="https://github.com/pmean/introduction-to-SAS/blob/master/basics1/results/getting-started.pdf">pdf format</a>.</p>
+<p>V01-02. History of SAS (8 minutes). Available in <a href="https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=ba88be23-73d8-4804-ada4-aa73011ac94a">Panopto format</a>. Slides with speaker notes are not available.</p>
+<p>V01-03. Your first SAS program (10 minutes). Available in <a href="https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=671572b5-a25a-46e0-8d85-aa730122496b">Panopto format</a>. Slides with speaker notes are not available. The SAS program used in this video is available on <a href="https://github.com/pmean/introduction-to-SAS/tree/master/basics1/src/getting-started.sas">my github repository</a>.</p>
 </div>
 
 
