Added SAS code learned to basics1

--- a/basics1/results/overview1.html
+++ b/basics1/results/overview1.html
@@ -366,7 +366,7 @@ summary {
 </div>
 
 
-<p>This file was created by Steve Simon using R Markdown on 2020-06-27 and last updated on 2020-06-27. You can find the source code on <a href="https://github.com/pmean/introduction-to-SAS/tree/master/basics1/src">my github repository</a>.</p>
+<p>This file was created by Steve Simon using R Markdown on 2020-06-27 and last updated on 2020-06-28. You can find the source code on <a href="https://github.com/pmean/introduction-to-SAS/tree/master/basics1/src/overview1.Rmd">my github repository</a>.</p>
 <div id="learning-objectives" class="section level3">
 <h3>Learning objectives</h3>
 <ol style="list-style-type: decimal">
@@ -374,8 +374,22 @@ summary {
 <li><p>To identify an access method for SAS that works for you.</p></li>
 </ol>
 </div>
-<div id="videos" class="section level3">
-<h3>Videos</h3>
+<div id="sas-code-that-you-will-learn" class="section level3">
+<h3>SAS code that you will learn</h3>
+<ul>
+<li>data</li>
+<li>delimiter</li>
+<li>filename</li>
+<li>infile</li>
+<li>input</li>
+<li>ods</li>
+<li>proc print</li>
+<li>run</li>
+<li>title</li>
+</ul>
+</div>
+<div id="videos-and-handouts" class="section level3">
+<h3>Videos and handouts</h3>
 <ul>
 <li>V01-01. Getting started (16 minutes).
 <ul>
@@ -391,13 +405,27 @@ summary {
 <ul>
 <li>Available in <a href="https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=671572b5-a25a-46e0-8d85-aa730122496b">Panopto format</a>.</li>
 <li>Slides with speaker notes are not available.</li>
-<li>your-first-program.sas is available in <a href="https://github.com/pmean/introduction-to-SAS/tree/master/basics1/src/getting-started.sas">text format</a>.</li>
+<li>your-first-program.sas is available in <a href="https://github.com/pmean/introduction-to-SAS/tree/master/basics1/src/your-first-program.sas">text format</a>.</li>
 </ul></li>
-<li>V01-04. Storing SAS datasets using libname (xx minutes).
+<li>V01-04. Storing SAS datasets using libname (12 minutes).
 <ul>
 <li>Available in <a href="https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=a8dbb622-2d61-41a7-b6a4-aa7301264e3e">Panopto format</a>.</li>
 <li>Slides with speaker notes are not available.</li>
-<li>your-first-program.sas is available in <a href="https://github.com/pmean/introduction-to-SAS/tree/master/basics1/src/getting-started.sas">text format</a>.</li>
+<li>permanent-storage.sas is available in <a href="https://github.com/pmean/introduction-to-SAS/tree/master/basics1/src/permanent-storage.sas">text format</a>.</li>
+<li>re-use.sas is available in <a href="https://github.com/pmean/introduction-to-SAS/tree/master/basics1/src/re-use.sas">text format</a>.</li>
+</ul></li>
+<li>V01-05. Storing SAS output using ODS (15 minutes).
+<ul>
+<li>Available in <a href="https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=cebf1a98-06bf-41e0-9be1-aa7301384dc6">Panopto format</a>.</li>
+<li>Slides with speaker notes are not available.</li>
+<li>saved-pdf.sas is available in <a href="https://github.com/pmean/introduction-to-SAS/tree/master/basics1/src/saved-pdf.sas">text format</a>.</li>
+<li>saved-html.sas is available in <a href="https://github.com/pmean/introduction-to-SAS/tree/master/basics1/src/saved-html.sas">text format</a>.</li>
+</ul></li>
+<li>V01-06. Reading external data using infile and filename (13 minutes).
+<ul>
+<li>Available in <a href="https://umkc.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=faeefa60-c4ed-4d5b-a959-aa73013ea6af">Panopto format</a>.</li>
+<li>Slides with speaker notes are not available.</li>
+<li>input-text.sas is available in <a href="https://github.com/pmean/introduction-to-SAS/tree/master/basics1/src/input-text.sas">text format</a>.</li>
 </ul></li>
 </ul>
 </div>
